<resources>

    <string name="app_name">Drag</string>
    <string name="cherish_the_journey">CHERISH THE JOURNEY</string>
    <string name="go_back">Go back</string>
    <string name="close">Close</string>

    <!-- Strings related to Login -->
    <string name="log_in">Log In</string>
    <string name="welcome_back">Welcome back,</string>
    <string name="log_in_to_continue">Log in to continue</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="password">Password</string>

    <!-- Strings related to Sign Up -->
    <string name="welcome_to_drag">Welcome to Drag</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="do_not_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create Account</string>
    <string name="terms_of_usage_text">By creating an account, you agree to our Terms &amp; Conditions and Privacy Policy</string>

    <!-- Strings related to Internet Connectivity -->
    <string name="no_connection">No Connection</string>
    <string name="check_your_internet">Please check your internet connection and try again</string>
    <string name="try_again">Try Again</string>
    <string name="click_here">Click here to check your internet settings</string>

    <!-- Strings related to Main -->
    <string name="book_ride">Book Ride</string>
    <string name="profile">Profile</string>
    <string name="trips">Trips</string>
    <string name="account">Account</string>

    <!-- Strings related to Notifications -->
    <string name="notifications">Notifications</string>

    <!-- Strings related to Book Ride -->
    <string name="select_location">Select Location</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="drop_location">Drop Location</string>
    <string name="swap_location">Swap Location</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="seats">Seats</string>

    <!-- Strings related to Select Ride -->
    <string name="select_ride">Select Ride</string>
    <string name="select_ride_note">Note: Fare will vary as seats get filled</string>
    <string name="swipe_up_to_see_more">Swipe up to see more</string>
    <string name="no_rides_available_now">No Rides Available Now !</string>
    <string name="select_ride_rules">\u00201. The selected ride will be active for 72 hours before its start time.\n\n
        2. You can\'t join another ride until this ride is confirmed.\n\n
        3. Fare will be divided according to the number of seats you select.\n\n
        4. Your share of fare will be known to you before allocating the cab.\n\n
        5. Cab will be allocated only after tele-verification of your booking.\n\n
        6. You can track status of your booking in the Trips section of the app.</string>
    <string name="select_request_title">Can\'t find the right ride? \n Request One!</string>
    <string name="join_success_message">Your ride joining request is successful.</string>
    <string name="share_via_whatsapp">Share via Whatsapp</string>
    <string name="join">JOIN</string>

    <!-- Strings related to Select Cab -->
    <string name="select_cab">Select Cab</string>
    <string name="no_cabs_available_now">No Cabs Available Now !</string>
    <string name="please_check_after_sometime">Please check after some time.</string>
    <string name="cab_type">Cab Type</string>
    <string name="compact">Compact</string>
    <string name="sedan">Sedan</string>
    <string name="suv">SUV</string>
    <string name="suv_plus">SUV+</string>
    <string name="hatchback_cars">Indica, Swift, Alto, Ford Figo</string>
    <string name="sedan_cars">Dzire, Etios, Indigo, Xcent</string>
    <string name="suv_cars">Ertiga, Xylo, Innova</string>
    <string name="select_cab_type_rules">✪ One way trip of about 135 km includes toll charges if any.\n
        ✪ Distance exceeding 135 km is chargeable at ₹12/km for Sedan and ₹15/km for SUV.\n
        ✪ Fare for extra distance to be paid to the driver in cash.</string>

    <!-- Strings related to Confirm Ride -->
    <string name="confirm_ride">Confirm Ride</string>
    <string name="fare">Fare</string>
    <string name="cab_details">Cab Details</string>
    <string name="your_details">Your Details</string>
    <string name="city">City</string>
    <string name="your_name">Your Name</string>
    <string name="pickup">Pickup</string>
    <string name="drop">Drop</string>
    <string name="make_payment">Make Payment</string>
    <string name="select_payment_mode">• Select Payment Mode •</string>
    <string name="advance_amount">Advance Amount</string>
    <string name="full_amount">Full Amount</string>

    <!-- Strings related to Payment -->
    <string name="taking_you_to_payment_gateway">Taking You To Payment Gateway &#8230;</string>
    <string name="payment_successful_">Payment Successful !</string>
    <string name="thanks_for_making_payment">Thanks for making payment.</string>
    <string name="new_trip">A new trip has been added to your account.</string>
    <string name="sorry_payment_failed_">Sorry, Your Payment Failed !</string>
    <string name="in_case_of_query_please">In case of any queries, please</string>
    <string name="contact_our_help_desk">contact our help desk at +91 7010823612</string>
    <string name="help_desk_">Help Desk</string>
    <string name="payment_in_process_">Payment In Process !</string>
    <string name="your_payment_is_in_progress">Your payment is in progress.</string>

    <!-- Strings related to Trips -->
    <string name="no_trips_available">No Trips Available !</string>
    <string name="booking_id_">Booking ID:</string>
    <string name="payment_successful">Payment Successful</string>
    <string name="payment_in_process">Payment In Process</string>
    <string name="payment_failed">Payment Failed</string>
    <string name="trip_cancelled">Trip Cancelled</string>
    <string name="trip_confirmed">Trip Confirmed</string>

    <!-- Strings related to Trip details -->
    <string name="driver_info">Driver Info</string>
    <string name="cab_info">Cab Info</string>
    <string name="location_info">Location Info</string>
    <string name="payment_info">Payment Info</string>
    <string name="booking_status">Booking Status</string>
    <string name="no_of_seats">No of Seats</string>
    <string name="pickup_">Pickup:</string>
    <string name="drop_">Drop:</string>
    <string name="booking_id">Booking ID</string>
    <string name="amount_paid">Amount Paid</string>
    <string name="pending_payable_amount">Pending Payable Amount</string>

    <!-- Strings related to Account -->
    <string name="help_and_faq">Help &amp; FAQ</string>
    <string name="logout">Logout</string>
    <string name="terms_and_services">Terms &amp; Services</string>
    <string name="payment">Payment</string>

    <!-- Strings related to Profile -->
    <string name="my_profile">My Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save_profile">Save Profile</string>
    <string name="alternate_number">Alternate Number</string>
    <string name="asterisks">********</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>

    <!-- Strings related to Help & FAQ -->
    <string name="feedback_hint">Can you please help me with &#8230;</string>
    <string name="send">Send</string>
    <string name="call">Call</string>
    <string name="help_desk">+91 7010823612</string>
    <string name="cancel">Cancel</string>

    <string name="help_faq_question_1">When will I get driver and cab details for my trip?</string>
    <string name="help_faq_answer_1">The driver and cab details will be shared before 2&#8211;8 hours from your trip pickup time. You can
        view the same along with the other details by tapping on the specific trip.</string>
    <string name="help_faq_question_2">How do I change my trip pickup time?</string>
    <string name="help_faq_answer_2">There is no charges for altering pickup time by an hour or two. However,
        we permit such changes only before 8 hours from the original trip starting time. You can message us using the envelope button in the bottom right corner.</string>
    <string name="help_faq_question_3">I wish to cancel my trip. What are the cancellation rules?</string>
    <string name="help_faq_answer_3">Cab assigned for your trip might travel long way from a city other than your pickup city to reach you.
        Due to which, we accept cancellation only before 8 hours from the pickup time. You can message us using the envelope button in the bottom right corner.
        The following rules are applicable:\n\n
        » If cancelled before 24 hours from the pickup time, 0% of the fare will be charged as cancellation fee\n
        » If cancelled before 12 hours from the pickup time, 5% of the fare will be charged as cancellation fee\n
        » If cancelled before 8 hours from the pickup time, 10% of the fare will be charged as cancellation fee
    </string>
    <string name="help_faq_question_4">I have paid an extra amount to the driver</string>
    <string name="help_faq_answer_4">We encourage our partners to collect amount as shown to you while booking. In rare cases,
        if such a situation arises we request you to describe the issue by writing us using the envelope button. We will ensure you get a refund within 24 hours.</string>
    <string name="help_faq_question_5">Does my trip fare include parking charges?</string>
    <string name="help_faq_answer_5">No, parking charges are excluded. The total estimated cost for your trip indicates the fare for kilometres travelled,
        duration of the ride, driver allowance and taxes (as applicable)\n\nNote: State taxes, permits, tolls are included in your trip fare.</string>

</resources>