<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/payment_success_layout"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/payment_success_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:contentDescription="@string/close"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            app:srcCompat="@drawable/ic_back_blue" />

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/payment_success_message1"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/payment_successful_"
        app:srcCompat="@drawable/ic_payment_success" />

    <TextView
        android:id="@+id/payment_success_message1"
        style="@style/TextStyle16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/payment_success_message2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/payment_successful_" />

    <TextView
        android:id="@+id/payment_success_message2"
        style="@style/TextStyle8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="16dp"
        android:text="@string/thanks_for_making_payment" />

    <LinearLayout
        android:id="@+id/payment_success_booking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/payment_success_message2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:orientation="horizontal">

        <TextView
            style="@style/TextStyle8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_trip" />

        <!--<TextView
            android:id="@+id/payment_success_booking_id"
            style="@style/TextStyle8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            tools:text="92499732" />-->

    </LinearLayout>

    <!--<Button
        android:id="@+id/payment_success_button"
        style="@style/TextStyle7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/payment_success_booking"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimary"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/booking_status"
        android:textAllCaps="false" />-->

</RelativeLayout>